feat: a route for the Telegram bot has been added
